# path

./: .ccls  .gitignore  .gitmodules  .ignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  build.sh  cmake_cli_extend  compile_commands.sh  debug_build.sh  debug_run.sh  debug_run_image_test.sh  failure_notes.txt  notes.txt  outline_pool_scene.xml  run.sh  run_image_test.sh  run_video_test.sh  scan_notes.txt  setup.py
benchmarks/src/: reduce.cu  render.cpp  render.cu  scan.cu  sort.cu
cmake/Modules/: CMakeCUDAInformation.cmake
configs/: benchmark.yaml  testing.yaml
docker/cuda_11_1/: Dockerfile
hooks/: pre-commit
include/: BGRA.h  ProgressBar.hpp
include/bsdf/: bsdf.h  bsdf_sample.h  combined.h  dielectric_refractive.h  diffuse.h  diffuse_glossy.h  diffuse_mirror.h  glossy.h  material.h  mirror.h  union_bsdf.h  utils.h
include/compile_time_dispatch/: compile_time_dispatch.h  dispatch_value.h  enum.h  one_per_instance.h  settings_trait.h  tuple.h
include/cs123_compat/: CS123ISceneParser.h  CS123SceneData.h  CS123XmlSceneParser.h  CamtransCamera.h  Scene.h
include/data_structure/: bitset_ref.h  copyable.h  copyable_to_vec.h  get_ptr.h  get_size.h  vector.h
include/execution_model/: caching_thrust_allocator.h  device_vector.h  execution_model.h  execution_model_single_item.h  execution_model_vector_type.h  host_device_vector.h  host_vector.h  thrust_data.h  vector_type.h
include/generate_data/: amend_config.h  baryocentric_coords.h  baryocentric_to_ray.h  clip_by_plane.h  constants.h  gen_data.h  generate_data.h  generate_scene.h  generate_scene_triangles.h  get_dir_towards.h  get_points_from_subset.h  mesh_scene_generator.h  normalize_scene_triangles.h  possibly_shadowed.h  print_region.h  region_setter.h  remap_large.h  scene_triangles.h  shadowed.h  sort_triangle_points.h  subset_to_multi.h  to_tensor.h  torch_rng_state.h  torch_utils.h  triangle.h  triangle_subset.h  triangle_subset_convex_union.h  triangle_subset_intersection.h  triangle_subset_union.h  value_adder.h
include/integrate/: dir_sample.h  ray_info.h  rendering_equation.h  rendering_equation_components.h  rendering_equation_iteration.h  rendering_equation_settings.h  rendering_equation_state.h  sample_triangle.h
include/intersect/: bounded.h  intersectable.h  intersection.h  is_triangle_between.h  is_triangle_blocking.h  mesh_instance.h  object.h  optional_min.h  ray.h  solve.h  transformed_object.h  triangle.h  triangle_impl.h
include/intersectable_scene/: intersectable_scene.h  intersector.h  ray_writer.h  scene_generator.h  scene_ref.h  to_bulk.h  to_bulk_impl.h  triangle_generator.h
include/kernel/: atomic.h  grid_location_info.h  kernel_launch.h  kernel_launch_impl_cpu.h  kernel_launch_impl_gpu.cuh  launchable.h  location_info.h  make_no_interactor_launchable.h  make_runtime_constants_reduce_launchable.h  progress_bar_launch.h  reduce_samples.cuh  reducer.h  runtime_constants_reducer.h  runtime_constants_reducer_impl_gpu.cuh  sample_reducer.h  settings.h  thread_interactor.h  thread_interactor_launchable.h  tuple_thread_interactor.h  work_division.h  work_division_impl.h  work_division_settings.h
include/lib/: array_transform.h  array_vec.h  assert.h  async_for.h  attribute.h  bgra.h  bgra_32.h  binary_search.h  bit_utils.h  bitset.h  caching_thrust_allocator.h  concepts.h  cuda_utils.h  debug_print.h  edges.h  eigen_utils.h  eigen_wrapper.h  execution_model.h  execution_model_datatype.h  execution_model_vector_type.h  float_rgb.h  float_rgb_image_utils.h  fnv.h  group.h  host_vector.h  integer_division_utils.h  intensity_utils.h  one_per_instance.h  optional.h  parallel_for_loop.h  printf_dbg.h  projection.h  reducible_bin_op.h  reference_type.h  rgba.h  search_inclusive.h  serialize.h  serialize_eigen.h  serialize_enum.h  serialize_tagged_union.h  (+17 more)
include/material/: brdf.h  brdf_type.h  material.h  utils.h
include/meta/: aggregate_constructable_from.h  aggregate_constructible_from.h  all_types_same.h  all_values.h  all_values_as_tuple.h  all_values_enum.h  all_values_integral.h  all_values_pow_2.h  all_values_range.h  all_values_tuple.h  array_cat.h  as_tuple.h  as_tuple_macro.h  as_tuple_str_macro.h  concepts.h  container_concepts.h  decays_to.h  dispatch.h  dispatch_value.h  enum.h  get_idx.h  less_comparable.h  macro_map.h  mock.h  n_tag.h  n_tag_dispatchable.h  one_per_instance.h  pack_element.h  per_instance.h  pick_type.h  predicate_for_all_values.h  ref_generator.h  sequential_dispatch.h  sequential_look_up.h  serialize_as_tuple_str.h  specialization_of.h  static_sized_string.h  std_array_specialization.h  tag.h  tag_dispatchable.h  (+4 more)
include/old-scene/: color.h  light.h  pool_scene.h  scene.h  texture.h
include/ray/: action_grid.h  best_intersection.h  block_data.h  by_type_data.h  cone.h  cube.h  cuda_ray_utils.cuh  cylinder.h  execution_model.h  floats_to_bgras.cuh  intersect.cuh  intersect.h  kdtree.h  kdtree_nodes_ref.h  lighting.cuh  projection.h  projection_impl.h  ray.cuh  ray_utils.h  render.h  render_impl.h  render_impl_utils.h  scene_ref.h  sort_actions.h  sort_actions_impl.h  sphere.h  traversal_grid.h  traversal_grid_impl.h
include/render/: compile_time_settings.h  computation_settings.h  config_io.h  dir_sample.h  dir_sampler.h  dir_sampler_type.h  general_settings.h  individual_to_bulk_settings.h  (+12 more)
neural_render/: notes.txt
outputs/: README.md
project_plan/: plan.md
project_proposal/: proposal.md
scenes/: cornell-backwall-test-diffuse.xml  cornell-bunny.xml  cornell-diffuse-glossy-sphere.xml  cornell-diffuse.xml  cornell-glass-box.xml  cornell-glass-sphere.xml  cornell-glossy-sphere.xml  cornell-glossy.xml  cornell-mirror.xml  cornell-water.xml  double.xml  one-face.xml  single.xml
scripts/: benchmark_utils.py  build  build_ccv.sh  ccv_launch_job.sh  ccv_setup.sh  format_all.sh  plot_benchmark_runs.py  plot_reduce_benchmark_runs.py  plot_render_benchmark_runs.py  plot_tri.py  solve_normals.py  test_convexity_divide.py
src/: check_downsample.cpp  loaded_float_rgb.cpp  loaded_intensities.cpp  main.cpp  span_check.cpp  temp.cpp  test_gen_data.cpp
(+556 files in other folders)
